# OtusBasicProject

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Game.h  Map.h  Player.h
src/: Game.cpp  Map.cpp  Player.cpp  main.cpp
